update website contents & 404 page

--- a/firebase.json
+++ b/firebase.json
@@ -4,17 +4,13 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**",
-      ".git",
-      ".gitignore",
-      "idea",
-      ".firebaserc"
+      "**/node_modules/**"
     ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ]    
   }
 }
